# graph-service

./: .dockerignore  .gitignore  README.md  check_core_purity.py  generate_inbound_models.sh  pyproject.toml  requirements.in  requirements.txt
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
specs/001-service-skeleton/: data-model.md  plan.md  (+4 more)
src/: __init__.py
tests/: conftest.py  test_application_architecture_validation.py  test_application_architectures_endpoint.py  test_application_architectures_persistence.py  test_component_dependencies_endpoint.py  test_component_dependencies_persistence.py  test_component_dependencies_use_case.py  test_components_endpoint.py  test_components_persistence.py  test_components_persistence_failure.py  test_infrastructure_routes.py  test_micro_affinity_group_deployment_scope_endpoint.py  test_micro_affinity_group_deployment_scope_persistence.py  test_micro_affinity_group_deployment_scope_use_case.py  test_micro_affinity_group_relationship_mapper.py  test_micro_affinity_group_use_case.py  test_micro_affinity_groups_endpoint.py  test_micro_affinity_groups_persistence.py  test_perf_smoke_components.py  test_perf_smoke_dependencies.py  test_perf_smoke_micro_affinity_groups.py  test_perf_smoke_workload_test_scope.py  test_validation_endpoint.py  test_workload_test_scope_endpoint.py  test_workload_test_scope_persistence.py  test_workload_test_scope_use_case.py
(+251 files in other folders)
